--- a/Workspace/LogSystem/LogSystem.vcxproj
+++ b/Workspace/LogSystem/LogSystem.vcxproj
@@ -169,9 +169,10 @@
     <ClInclude Include="SpdLog\include\spdlog\spdlog.h" />
     <ClInclude Include="SpdLog\include\spdlog\tweakme.h" />
     <ClInclude Include="SpdLog\include\spdlog\version.h" />
+    <ClInclude Include="src\Log.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Dummy.cpp" />
+    <ClCompile Include="src\Log.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
