--- a/Workspace/LogSystem/LogSystem.vcxproj.filters
+++ b/Workspace/LogSystem/LogSystem.vcxproj.filters
@@ -1,257 +1,303 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="cfg">
-      <UniqueIdentifier>{9565880B-016F-887C-8AEA-9E7CF6F2937C}</UniqueIdentifier>
+    <Filter Include="SpdLog">
+      <UniqueIdentifier>{4E119ED1-3AB3-C8A7-236E-DCFB0FAF4FF8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="details">
-      <UniqueIdentifier>{8B788209-F757-01A5-0070-8C7B6CCE6706}</UniqueIdentifier>
+    <Filter Include="SpdLog\include">
+      <UniqueIdentifier>{C1A6964B-AD74-8A51-9608-FB77827566B6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="fmt">
-      <UniqueIdentifier>{4C73880B-B87C-887C-41F8-9E7CAD00947C}</UniqueIdentifier>
+    <Filter Include="SpdLog\include\spdlog">
+      <UniqueIdentifier>{D933D7AA-45A0-92A5-0E94-2A037ABFB40D}</UniqueIdentifier>
     </Filter>
-    <Filter Include="fmt\bundled">
-      <UniqueIdentifier>{391E0980-A5D3-8175-2EC8-7B4C9A7C7879}</UniqueIdentifier>
+    <Filter Include="SpdLog\include\spdlog\cfg">
+      <UniqueIdentifier>{D8F0AAE8-44B3-DE72-8D63-6DFFF964B750}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sinks">
-      <UniqueIdentifier>{0D785B10-798C-83C1-420E-2721AEE17FF2}</UniqueIdentifier>
+    <Filter Include="SpdLog\include\spdlog\details">
+      <UniqueIdentifier>{4EEDAE7F-BA05-96A9-83B2-2543EF892A43}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SpdLog\include\spdlog\fmt">
+      <UniqueIdentifier>{8FFEAAE8-FBC0-DE72-4471-6DFFB072B750}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SpdLog\include\spdlog\fmt\bundled">
+      <UniqueIdentifier>{7C3C186D-E8AA-6DEC-3194-28EC9D416388}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SpdLog\include\spdlog\sinks">
+      <UniqueIdentifier>{10E04DC0-7CED-7BA6-05D4-779171E0475D}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{2DAB880B-99B4-887C-2230-9F7C8E38947C}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SpdLog\include\spdlog\async.h" />
-    <ClInclude Include="SpdLog\include\spdlog\async_logger-inl.h" />
-    <ClInclude Include="SpdLog\include\spdlog\async_logger.h" />
+    <ClInclude Include="SpdLog\include\spdlog\async.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\async_logger-inl.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\async_logger.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\cfg\argv.h">
-      <Filter>cfg</Filter>
+      <Filter>SpdLog\include\spdlog\cfg</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\cfg\env.h">
-      <Filter>cfg</Filter>
+      <Filter>SpdLog\include\spdlog\cfg</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\cfg\helpers-inl.h">
-      <Filter>cfg</Filter>
+      <Filter>SpdLog\include\spdlog\cfg</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\cfg\helpers.h">
-      <Filter>cfg</Filter>
+      <Filter>SpdLog\include\spdlog\cfg</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\cfg\log_levels.h">
-      <Filter>cfg</Filter>
+      <Filter>SpdLog\include\spdlog\cfg</Filter>
     </ClInclude>
-    <ClInclude Include="SpdLog\include\spdlog\common-inl.h" />
-    <ClInclude Include="SpdLog\include\spdlog\common.h" />
+    <ClInclude Include="SpdLog\include\spdlog\common-inl.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\common.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\backtracer-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\backtracer.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\circular_q.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\console_globals.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\file_helper-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\file_helper.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\fmt_helper.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\log_msg-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\log_msg.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\log_msg_buffer-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\log_msg_buffer.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\mpmc_blocking_q.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\null_mutex.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\os-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\os.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\periodic_worker-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\periodic_worker.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\registry-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\registry.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\synchronous_factory.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\tcp_client-windows.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\tcp_client.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\thread_pool-inl.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\thread_pool.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\details\windows_include.h">
-      <Filter>details</Filter>
+      <Filter>SpdLog\include\spdlog\details</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bin_to_hex.h">
-      <Filter>fmt</Filter>
+      <Filter>SpdLog\include\spdlog\fmt</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\chrono.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\color.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\compile.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\core.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\format-inl.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\format.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\locale.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\ostream.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\posix.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\printf.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\bundled\ranges.h">
-      <Filter>fmt\bundled</Filter>
+      <Filter>SpdLog\include\spdlog\fmt\bundled</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\fmt.h">
-      <Filter>fmt</Filter>
+      <Filter>SpdLog\include\spdlog\fmt</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\fmt\ostr.h">
-      <Filter>fmt</Filter>
+      <Filter>SpdLog\include\spdlog\fmt</Filter>
     </ClInclude>
-    <ClInclude Include="SpdLog\include\spdlog\formatter.h" />
-    <ClInclude Include="SpdLog\include\spdlog\fwd.h" />
-    <ClInclude Include="SpdLog\include\spdlog\logger-inl.h" />
-    <ClInclude Include="SpdLog\include\spdlog\logger.h" />
-    <ClInclude Include="SpdLog\include\spdlog\pattern_formatter-inl.h" />
-    <ClInclude Include="SpdLog\include\spdlog\pattern_formatter.h" />
+    <ClInclude Include="SpdLog\include\spdlog\formatter.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\fwd.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\logger-inl.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\logger.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\pattern_formatter-inl.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\pattern_formatter.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\android_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\ansicolor_sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\ansicolor_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\base_sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\base_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\basic_file_sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\basic_file_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\daily_file_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\dist_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\dup_filter_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\msvc_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\null_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\ostream_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\ringbuffer_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\rotating_file_sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\rotating_file_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\stdout_color_sinks-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\stdout_color_sinks.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\stdout_sinks-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\stdout_sinks.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\syslog_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\systemd_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\tcp_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\win_eventlog_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\wincolor_sink-inl.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
     <ClInclude Include="SpdLog\include\spdlog\sinks\wincolor_sink.h">
-      <Filter>sinks</Filter>
+      <Filter>SpdLog\include\spdlog\sinks</Filter>
     </ClInclude>
-    <ClInclude Include="SpdLog\include\spdlog\spdlog-inl.h" />
-    <ClInclude Include="SpdLog\include\spdlog\spdlog.h" />
-    <ClInclude Include="SpdLog\include\spdlog\tweakme.h" />
-    <ClInclude Include="SpdLog\include\spdlog\version.h" />
-    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="SpdLog\include\spdlog\spdlog-inl.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\spdlog.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\tweakme.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="SpdLog\include\spdlog\version.h">
+      <Filter>SpdLog\include\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Log.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Log.cpp" />
+    <ClCompile Include="src\Log.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
