The Logging System Does Not Appear To Produce Any Memory Leaks Even after 2 hours of checking however crt still reports certain memory leaks

--- a/Workspace/Sandbox/Sandbox.vcxproj
+++ b/Workspace/Sandbox/Sandbox.vcxproj
@@ -93,7 +93,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Example1.h" />
+    <ClInclude Include="src\Symbols.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp" />
