--- a/Workspace/Sandbox/Sandbox.vcxproj.filters
+++ b/Workspace/Sandbox/Sandbox.vcxproj.filters
@@ -33,270 +33,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\async.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\async_logger-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\async_logger.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\cfg\argv.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\cfg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\cfg\env.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\cfg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\cfg\helpers-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\cfg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\cfg\helpers.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\cfg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\cfg\log_levels.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\cfg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\common-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\common.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\backtracer-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\backtracer.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\circular_q.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\console_globals.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\file_helper-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\file_helper.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\fmt_helper.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\log_msg-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\log_msg.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\log_msg_buffer-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\log_msg_buffer.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\mpmc_blocking_q.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\null_mutex.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\os-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\os.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\periodic_worker-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\periodic_worker.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\registry-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\registry.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\synchronous_factory.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\tcp_client-windows.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\tcp_client.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\thread_pool-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\thread_pool.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\details\windows_include.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\details</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bin_to_hex.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\chrono.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\color.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\compile.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\core.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\format-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\format.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\locale.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\ostream.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\posix.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\printf.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\bundled\ranges.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt\bundled</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\fmt.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fmt\ostr.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\fmt</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\formatter.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\fwd.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\logger-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\logger.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\pattern_formatter-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\pattern_formatter.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\android_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\ansicolor_sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\ansicolor_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\base_sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\base_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\basic_file_sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\basic_file_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\daily_file_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\dist_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\dup_filter_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\msvc_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\null_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\ostream_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\ringbuffer_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\rotating_file_sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\rotating_file_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\stdout_color_sinks-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\stdout_color_sinks.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\stdout_sinks-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\stdout_sinks.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\syslog_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\systemd_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\tcp_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\win_eventlog_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\wincolor_sink-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\sinks\wincolor_sink.h">
-      <Filter>LogSystem\SpdLog\include\spdlog\sinks</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\spdlog-inl.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\spdlog.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\tweakme.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="..\LogSystem\SpdLog\include\spdlog\version.h">
-      <Filter>LogSystem\SpdLog\include\spdlog</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Example1.h">
-      <Filter>src</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Symbols.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
